{
    "name": "Input",
    "maps": [
        {
            "name": "MainInput",
            "id": "ae54028c-3d8e-43fb-99dd-66d3a7c2a0ab",
            "actions": [
                {
                    "name": "KeyboardMouseSenseBtn",
                    "type": "Button",
                    "id": "5ccc8294-81df-4d62-bb79-027e09dd644c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ControllerSenseBtn",
                    "type": "Button",
                    "id": "9ac511b8-efe8-4c28-92e0-5ef9fe21ab5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMoveSense",
                    "type": "Value",
                    "id": "848e42ae-4c1c-442a-bc70-d66f3b41c0d9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ControllerAnalogSense",
                    "type": "Value",
                    "id": "81f555d8-c28b-45ce-b6c8-224f926ad719",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "b34ba00f-2a7e-4ebb-8d66-958155c985eb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "880e2b28-b2bf-4801-9763-61f8780f4d94",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "d6e716fc-e255-4d33-95a7-d8c9e341085a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ButtonA",
                    "type": "Button",
                    "id": "6cc04279-b8e9-41fd-a289-67e9c4628a23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonX",
                    "type": "Button",
                    "id": "327b92ee-bcc4-491f-868f-c5d98f59576f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonLB",
                    "type": "Button",
                    "id": "ff88a7fb-165e-40a5-9b5a-174353689aae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e2024f1-ff41-47d2-b458-e33ca498e037",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMouseSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d4e52e7-55d3-45b8-8a33-aeead4098f99",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMouseSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d3f8cd1-c43a-4225-8e41-e88ce6b02420",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMouseSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b942621-3418-4465-b21a-99d235641b9d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMouseSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "088567c0-6158-4045-9dda-531f851e4360",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a5fcf74-d292-41f5-91e0-032a58e6b2dc",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a0ab192-0b91-47e1-b5b3-8fef4b3e1d35",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a638da72-8e2e-45e4-90ae-bc252848d8ed",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87e9f216-3a59-4c3b-847e-482890ae8e67",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61f52fdf-344e-4980-9bdc-29fea4e88767",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dde84e71-6693-4a5b-8f22-205cc70b11aa",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cdc9d08-3a82-40ee-b874-535c8c4617bd",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a289eae-df78-4a29-8637-aca3c5e0bcc2",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5def60c7-4f07-40bc-86e5-c6658dfb79f3",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63fae364-b866-4e90-8b91-2f4702c8936b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31560146-d071-46cd-8c0a-8bd9f48ee0d1",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b340b30-901a-4d42-a332-ec88600132db",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "624d688a-a5b7-400c-a673-ce6962fe7a94",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ab12028-8dab-4c0c-a61d-a0b7831969b0",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8aad7eb1-8c12-456a-9748-993f62061168",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerSenseBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7987245-6398-49cc-a58e-a770ffcb3604",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMoveSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e420d480-98b5-4ec5-8a34-74fbeefe8467",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMoveSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "954eed5c-965a-420c-8596-954e7d9051bc",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAnalogSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2eb93feb-6584-47e3-98fa-1502fbf8a43e",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAnalogSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c91f37b7-c0db-4182-84a5-f321358a5d74",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAnalogSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "569f8d87-e1a7-43d1-a410-8d47b4f9ae57",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAnalogSense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "9a9e4539-bcf9-4870-94d5-a7af066d06c7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f61402d4-b100-4106-981b-06daf8cdb78b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6afbd79d-63c3-4c1a-88a0-354afc2da913",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d538ed1b-69b0-40a7-a383-289e47b5d1ce",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "3c83d4c9-f9cb-4c52-8744-3d02a0d54736",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "220e1158-9fbd-4f8f-b5f3-5d4464e9b0e8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ad3ed725-a43b-4d06-989b-a63a7f919a46",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2b2a433-116d-46fd-a916-50fba0e0a966",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "496871d3-bedb-4305-8857-009f05f17e0d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95af03a6-8c1b-4d55-9fe9-27a5c73246c2",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone,ScaleVector2",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53051552-a84d-4382-8b70-e2a3490c8870",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f897d975-8ec5-4fbb-97ad-0b4932399ada",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75c5ceb1-3839-4994-a2b6-b17f6221a169",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89d985ba-7f7c-458c-bf11-38fe43ac99e2",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35dde2d9-9eac-4542-a454-e1d521b91db4",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "659400f3-46f0-4515-8d1b-08f83ffe9cd4",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}